# deals

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bench_strip_ansi.py  benchmark.py  benchmark_regex.py  deal_analyzer.py  products.py  pyproject.toml  test_deal_analyzer.py  test_products.py  test_security.py  update_sentinel.py
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
tests/: test_parse_price.py
