[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-analyzer"
version = "0.1.0"
authors = [
  { name="Deal Analyzer Contributors" },
]
description = "A command-line tool for scoring used and refurbished Apple tech listings."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
"Homepage" = "https://github.com/OWNER/REPO"
"Bug Tracker" = "https://github.com/OWNER/REPO/issues"

[project.scripts]
deal-analyzer = "deal_analyzer:main"

[tool.setuptools]
py-modules = ["deal_analyzer", "products"]
